page hero style

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -3,7 +3,7 @@ title: "Strength4Life Europe"
 layout: page
 permalink: /
 header:
-  overlay_image: /test.webp 
+  overlay_image: /assets/images/life-changing-events-real-difference.webp 
 ---
 
 <section class="site-section first-section" id="section-1">
