feat: implement color scheme and utility classes

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -8,5 +8,6 @@ header:
 
 <section class="site-section first-section" id="section-1">
     <h1>Welcome to Strength4Life Europe</h1>
-    <p>More content coming soon.</p>
+    <p>This is a <span class="text-red">sample text in red</span>. This is a <span class="text-purple">sample text in purple</span>.</p>
+    <p>This is a <span class="highlight-red">sample text with red highlight</span>. This is a <span class="highlight-purple">sample text with purple highlight</span>.</p>
 </section>
