feat: add CSS style examples to homepage

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -6,88 +6,50 @@ header:
   overlay_image: /assets/images/life-changing-events-real-difference.webp 
 ---
 
-<section class="site-section first-section" id="hero-section">
-    <h1 class="sr-only">Strength4Life EU – Life Coach, Enabler, Management Consultant</h1>
-    <p class="page__lead">Helping you be the best you can be – in life and at work.</p>
-    <p>
-        <a href="/about/" class="btn btn--primary">About me</a>
-        <a href="/contact/" class="btn btn--secondary">Work with me</a>
-    </p>
-</section>
+<section class="site-section first-section" id="section-1">
+    <h1>Welcome to Strength4Life Europe</h1>
+    <p>More content coming soon.</p>
 
-<section class="site-section" id="german-intro">
-    <div class="box box--primary">
-        <h2>🇩🇪 Willkommen bei Strength4Life Europe.</h2>
-        <p>Ich bin Jon – Life Coach, Enabler, Management Consultant. Hier findest du Coaching- und Beratungsangebote für Einzelpersonen und Unternehmen. Auch wenn die Seite auf Englisch ist, möchte ich dir hier schon kurz sagen: Mit Strength4life unterstütze ich dich dabei, dein bestes Selbst zu leben – in deinem Alltag, in deinem Beruf, in deinem Leben.</p>
+    <h2>CSS Class Examples:</h2>
+    <p>This is a <span class="text-red">sample text in red</span>.</p>
+    <p>This is a <span class="text-purple">sample text in purple</span>.</p>
+    <p>This is a <span class="highlight-red">sample text with red highlight</span>.</p>
+    <p>This is a <span class="highlight-purple">sample text with purple highlight</span>.</p>
+
+    <h2>Image Container Example:</h2>
+    <div class="image-container" style="max-width: 200px;">
+        <img src="/assets/images/jon.webp" alt="Example Image">
     </div>
-</section>
 
-<section class="site-section" id="my-approach">
-    <h2>My Approach</h2>
-    <div class="image-container">
-        <img src="/assets/images/jon.webp" alt="Jon Evans">
-    </div>
-    <p>Hi, I’m Jon. For over 40 years I’ve worked with people all over the world – from airlines and hospitality to education, business and leadership. What I’ve learned is simple: <strong>you already have the strength you need.</strong> Sometimes you just need the right space, the right questions, and the right support to bring it out.</p>
-
-    <p>With me, you won’t get abstract theories or corporate buzzwords. You’ll get real conversations, reflection, and action – all built around your own story and the four life pillars I work with: <span class="page__lead text-purple">Body • Mind • Heart • Spirit</span></p>
-
-    <h3>What My Clients Say</h3>
-    <div class="box-container">
-        <blockquote class="testimonial-quote box box-third">
-            <p>“Life changing – both professional & personal.”</p>
-        </blockquote>
-        <blockquote class="testimonial-quote box box-third">
-            <p>“I feel stronger and more confident, with a clearer view on my life.”</p>
-        </blockquote>
-        <blockquote class="testimonial-quote box box-third">
-            <p>“Jon gave me the courage and self-belief to step outside my comfort zone.”</p>
-        </blockquote>
-    </div>
-    <p>
-        <a href="#" class="btn btn--info">Read more testimonials →</a>
-    </p>
-</section>
-
-<section class="site-section" id="who-i-work-with">
-    <h2>Who I work with</h2>
+    <h2>Box Examples:</h2>
     <div class="box-container">
         <div class="box box-half">
-            <h3>For Individuals</h3>
-            <p>I help you gain clarity, build resilience, and create balance in your life. That could mean working on your mindset, your career, or simply finding a new direction. Sometimes it’s even on the road – through my Travel4Life experiences.</p>
+            <h3>Half Box</h3>
+            <p>This is a half-width box with default styling.</p>
         </div>
-        <div class="box box-half">
-            <h3>For Businesses & Organisations</h3>
-            <p>I also work with companies and teams. I help employees and leaders become stronger, healthier, more motivated – and that makes a real difference to the whole organisation. Career coaching is part of this, supporting people to grow where they are.</p>
+        <div class="box box-half box--primary">
+            <h3>Primary Box</h3>
+            <p>This is a half-width box with primary brand color border.</p>
         </div>
     </div>
-    <p>
-        <a href="/coaching-for-individuals/" class="btn btn--primary">For Individuals</a>
-        <a href="/consulting-for-businesses/" class="btn btn--secondary">For Businesses</a>
-    </p>
-</section>
-
-<section class="site-section" id="about-me-teaser">
-    <h2>About Me</h2>
-    <div class="image-container">
-        <img src="/assets/images/jon.webp" alt="Jon Evans">
+    <div class="box-container">
+        <div class="box box-third testimonial-quote">
+            <h3>Testimonial Box</h3>
+            <p>This box uses testimonial quote styling.</p>
+        </div>
+        <div class="box box-third">
+            <h3>Third Box 1</h3>
+            <p>This is a third-width box.</p>
+        </div>
+        <div class="box box-third">
+            <h3>Third Box 2</h3>
+            <p>This is another third-width box.</p>
+        </div>
     </div>
-    <p>I grew up on a small island, and ever since I was 17 I’ve worked and lived around the globe – 92 countries so far! I’ve worked with more than 100 nationalities, and I still love meeting new people.</p>
 
-    <p>What drives me is simple: helping you become the best version of yourself.
-    Sometimes that’s in a one-to-one coaching conversation, sometimes in a team workshop, sometimes in a leadership meeting. The common thread: it’s always real, always personal.</p>
+    <h2>Emphasis Example:</h2>
+    <p>This is an example of <span class="page__lead text-purple">Body • Mind • Heart • Spirit</span> emphasis.</p>
 
-    <p>
-        <a href="/about/" class="btn btn--info">My story →</a>
-    </p>
-</section>
-
-<section class="site-section" id="closing-call-to-action">
-    <blockquote>
-        <p>“Never stop learning, because life never stops teaching.”</p>
-    </blockquote>
-    <p>If you’re ready to take a step toward more strength, balance and confidence – let’s talk.</p>
-
-    <p>
-        <a href="/contact/" class="btn btn--primary">Contact me →</a>
-    </p>
+    <h2>Section Styling:</h2>
+    <p>Sections can alternate colors using the <code>alternative-color</code> class on the <code>site-section</code> element.</p>
 </section>
