start home page content

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -7,9 +7,33 @@ header:
 ---
 
 <section class="site-section first-section" id="section-1">
-    <h1>Welcome to Strength4Life Europe</h1>
-    <p>More content coming soon.</p>
+    <h1 style="font-size: 260%"><span class="text-red">BE</span> THE BEST <span class="text-red">YOU</span> CAN BE</h1>
+    <h3 style="margin-top: -10px">– Meet Jon: Life coach • Enabler • Management Consultant –</h3>
 
+    <div style="text-align:center; margin:2.5em 0;">
+        <p style="font-size:1.2em; font-style:italic; margin-bottom:0";>
+            “Life changing – both professional &amp; personal.”
+        </p>
+        <a href="#" class="btn btn--primary">Read more client voices</a>
+    </div>
+
+
+    <div class="german-intro-container">
+        <div class="german-intro-image"></div>
+        <div class="german-intro-box">
+            <h2>🇩🇪 Willkommen bei Strength4Life</h2>
+            <p>
+                Ich bin Jon – Life Coach, Enabler, Management Consultant.
+                Hier findest du Coaching- und Beratungsangebote für Einzelpersonen und Unternehmen.
+                Auch wenn die Seite auf Englisch ist, möchte ich dir hier schon kurz sagen:
+                Mit Strength4Life unterstütze ich dich dabei, dein bestes Selbst zu leben –
+                in deinem Alltag, in deinem Beruf, in deinem Leben.
+            </p>
+        </div>
+    </div>
+
+
+    <br><br><br><br>
     <h2>CSS Class Examples:</h2>
     <p>This is a <span class="text-red">sample text in red</span>.</p>
     <p>This is a <span class="text-purple">sample text in purple</span>.</p>
