fix home on mobile

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -7,11 +7,11 @@ header:
 ---
 
 <section class="site-section first-section" id="section-1">
-    <h1 style="font-size: 260%"><span class="text-red">BE</span> THE BEST <span class="text-red">YOU</span> CAN BE</h1>
-    <h3 style="margin-top: -10px">– Meet Jon: Life coach • Enabler • Management Consultant –</h3>
+    <h1 class="home-heading"><span class="text-red">BE</span> THE BEST <span class="text-red"><br class="mobile-break">YOU</span> CAN BE</h1>
+    <h3 class="home-subheading">– Meet Jon: Life Coach • Enabler • Management Consultant –</h3>
 
-    <div style="text-align:center; margin:2.5em 0;">
-        <p style="font-size:1.2em; font-style:italic; margin-bottom:0";>
+    <div class="testimonial-div">
+        <p class="testimonial">
             “Life changing – both professional &amp; personal.”
         </p>
         <a href="#" class="btn btn--primary">Read more client voices</a>
