--- a/_pages/index.html
+++ b/_pages/index.html
@@ -6,6 +6,8 @@ header:
   overlay_image: /assets/images/life-changing-events-real-difference.webp 
 ---
 
+<section class="site-section first-section">
+
 <h1 class="home-heading">
     <span class="text-red">BE</span> THE BEST <span class="text-red"><br class="mobile-break">YOU</span> CAN BE
 </h1>
@@ -91,3 +93,123 @@ header:
         </p>
     </div>
 </div>
+
+
+
+<div class="short-bio">
+    <p>
+        Hi, I’m Jon. I grew up on a small island and ever since I was 17,
+        I’ve been exploring the world — <span class="text-purple">92 countries</span> so far!
+        Along the way I’ve worked with people from more than
+        <span class="text-red">100 nationalities</span>, in airlines, hospitality, education, and business.
+    </p>
+
+    <p>
+        What all these experiences taught me is simple:
+        <span class="text-purple">life is about people</span>. Supporting, listening, challenging,
+        and encouraging each other to grow.
+    </p>
+
+    <p>
+        Today, through <span class="text-red">Strength4Life</span>, I bring all of this experience together as a
+        <span class="text-purple">Life Coach, Enabler and Management Consultant</span>.
+        My goal is to help you discover your own strength, create balance, and move forward —
+        in your personal life, in your work, and in your organisation.
+    </p>
+</div>
+
+
+</section>
+
+
+<hr class="section-sep">
+
+
+<section class="alternative-color site-section">
+    <div class="approach">
+
+        <h1>My Approach</h1>
+
+        <p>
+            <span class="pillars-highlight">Body • Mind • Heart • Spirit</span> – Strength4Life encourages you to be the best you can be!
+        </p>
+
+        <p>
+            Strongly aligned to <span class="text-red">Maslow's Hierarchy of Human Needs</span>, I deliver a very realistic approach to a balanced life.
+            Working with your four pillars and your own life story, I encourage and provide ongoing support – enabling you to become
+            <span class="text-red">strong, mindful, resilient and respectful</span>.
+        </p>
+
+        <!-- Maslow pyramid -->
+        <figure class="approach-media">
+            <a href="/assets/images/maslow-pyramid.webp" data-lightbox="approach" data-title="Maslow’s Hierarchy of Human Needs">
+                <img src="/assets/images/maslow-pyramid.webp" alt="Maslow’s Hierarchy of Human Needs pyramid">
+            </a>
+        </figure>
+
+        <h3>Balance and the 4 Pillars</h3>
+        <p>
+            Good balance in your life is the synergy of many factors all existing together.
+            That’s why I work with the <span class="text-red">four pillars</span>:
+        </p>
+        <ul>
+            <li><strong>Body</strong> — health, energy, daily practices</li>
+            <li><strong>Mind</strong> — learning, clarity, curiosity</li>
+            <li><strong>Heart</strong> — emotions, relationships, values</li>
+            <li><strong>Spirit</strong> — purpose, belief, direction</li>
+        </ul>
+
+        <!-- 4 pillars graphic -->
+        <figure class="approach-media">
+            <a href="/assets/images/4-pillars.webp" data-lightbox="approach" data-title="Strength4Life Four Pillars">
+                <img src="/assets/images/4-pillars.webp" alt="Strength4Life 4 pillars: Body, Mind, Heart, Spirit">
+            </a>
+        </figure>
+
+        <blockquote>
+            “Jon and Strength 4 Life has motivated and inspired me to be more ‘aware’ of me! The fantastic structure of pillars always gives me a ‘checkpoint of in balance’. Reflection and awareness of where I’m at and where I’m going is a major benefit of learning from the master trainer, Jon. Many thanks for being an INFLUENTIAL part of my life!!”
+        </blockquote>
+
+        <h3>Holistic Approach</h3>
+        <p>
+            Treatment for the body, mind, spirit, connections and emotions.
+            An holistic approach simply means treating the <span class="text-red">whole person</span> rather than individual symptoms.
+            Holistic practices help to regain physical and energy balance in the body.
+        </p>
+        <p>
+            There is much to be credited to the ancient wisdom of our world.
+            Holistic therapies have been used for centuries and can play an important role in maintaining <span class="text-red">good health and well-being</span>.
+            Rather than addressing single symptoms, a holistic approach looks at the underlying cause – considering physical, mental, emotional, social and spiritual states together.
+        </p>
+
+        <!-- Holistic circle graphic -->
+        <figure class="approach-media">
+            <a href="/assets/images/holistic.webp" data-lightbox="approach" data-title="Strength4Life Holistic Approach">
+                <img src="/assets/images/holistic.webp" alt="Strength4Life holistic approach circle">
+            </a>
+        </figure>
+
+        <p>
+            Having a holistic approach to health and wellbeing involves activating the multiple and complex links between
+            <span class="text-red">Body, Mind, Heart and Spirit</span>.
+        </p>
+
+        <blockquote>
+            “From the basics to the deep stuff – it made me examine, find and be my authentic self – amidst a very crappy year personally – it really did give me some strength for my life.”
+        </blockquote>
+
+        <p>
+            <a href="/contact/" class="btn btn--info">Interested to learn more? Contact me!</a>
+        </p>
+
+        <!-- Jon portrait -->
+        <figure class="approach-media">
+            <img src="/assets/images/jon-portrait.webp" alt="Jon Evans coaching portrait">
+        </figure>
+
+    </div>
+</section>
+
+
+
+
