full home page content and style

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -213,3 +213,49 @@ header:
 
 
 
+
+
+<hr class="section-sep">
+
+<section class="site-section">
+    <h1>Who I Work With</h1>
+
+    <div class="box-container">
+
+        <!-- For Individuals -->
+        <div class="box box-half box--primary">
+            <h2>For Individuals</h2>
+            <p>
+                I work with people one-on-one through <strong>Life &amp; Mind Coaching</strong>,
+                as well as <strong>Travel4Life</strong> experiences that connect personal growth with adventure.
+            </p>
+            <p>
+                <a href="/coaching-for-individuals/" class="btn btn--primary">For Individuals →</a>
+            </p>
+        </div>
+
+        <!-- For Businesses & Organisations -->
+        <div class="box box-half box--info">
+            <h2>For Businesses &amp; Organisations</h2>
+            <p>
+                I support organisations with <strong>Management Consulting</strong> and
+                <strong>Career Coaching</strong>, helping teams and leaders grow stronger,
+                more resilient, and more effective.
+            </p>
+            <p>
+                <a href="/consulting-for-businesses/" class="btn btn--info">For Businesses →</a>
+            </p>
+        </div>
+
+    </div>
+
+    <!-- Closing quote -->
+    <blockquote class="closing-quote">
+        “Never stop learning, because life never stops teaching.”<br>
+        <a href="/contact/" style="font-style: normal;" class="btn btn--primary">Contact Me</a>
+    </blockquote>
+
+    <p>
+
+    </p>
+</section>
