coaching 4 individuals page

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -125,7 +125,7 @@ header:
 <hr class="section-sep">
 
 
-<section class="alternative-color site-section">
+<section class="alternative-color site-section"  id="my-approach">
     <div class="approach">
 
         <h1>My Approach</h1>
