add travel4life to business page

--- a/_pages/consulting-for-businesses.html
+++ b/_pages/consulting-for-businesses.html
@@ -87,12 +87,35 @@ header:
         <li><strong>LIFE</strong> – Making new skills and habits stick</li>
       </ul>
     </div>
+
+
+    <div class="box box-full box--secondary">
+      <h3>Travel4Life – Team & Employee Experiences</h3>
+      <p>
+        Beyond workshops and coaching, <span class="text-red">Travel4Life</span> offers
+        powerful team days and retreats — combining personal growth with adventure.
+        These experiences can serve as <strong>staff incentives, end-of-year rewards,
+        or team-building opportunities</strong>.
+      </p>
+      <p>
+        <a href="/coaching-for-individuals/travel4life/" class="btn btn--secondary">
+          Learn more about Travel4Life
+        </a>
+      </p>
+    </div>
+
+    
   </div>
+
+
 
   <blockquote class="business-quote-red">
     “This course has given me the necessary skills and support to feel more confident with my work,
     which filters down to my staff and the general work environment."
   </blockquote>
+
+
+
 </section>
 
 <hr class="section-sep">
