--- a/_pages/index.html
+++ b/_pages/index.html
@@ -8,10 +8,10 @@ header:
 
 <section class="site-section first-section">
 
-<h1 class="home-heading">
+<h1 class="home-heading" data-aos="fade-up">
     <span class="text-red">BE</span> THE BEST <span class="text-red"><br class="mobile-break">YOU</span> CAN BE
 </h1>
-<h3 class="home-subheading">– Meet Jon: Life Coach • Enabler • Management Consultant –</h3>
+<h3 class="home-subheading" data-aos="fade-down">– Meet Jon: Life Coach • Enabler • Management Consultant –</h3>
 
 <div class="testimonial-div">
     <p class="testimonial">
