feat: Add fade-up animations to page elements using data-aos

--- a/_pages/coaching-for-individuals.html
+++ b/_pages/coaching-for-individuals.html
@@ -7,8 +7,8 @@ header:
 ---
 
 <section class="site-section first-section indiv">
-  <h1>Coaching for Individuals</h1>
-  <div class="indiv-copy">
+  <h1 data-aos="fade-up">Coaching for Individuals</h1>
+  <div class="indiv-copy" data-aos="fade-up">
     <p>
       I help you find <span class="text-red">balance, clarity and strength</span> in every part of life.
       Whether you want focused <strong>life &amp; mind coaching</strong> or a unique
@@ -30,11 +30,11 @@ header:
 
 <!-- Life & Mind Coaching -->
 <section class="site-section indiv">
-  <figure class="indiv-media indiv-media-center">
+  <figure class="indiv-media indiv-media-center" data-aos="fade-up">
     <img src="/assets/images/motorbike.webp" alt="Reflective coaching time out on the road" loading="lazy">
   </figure>
-  <h2>Life &amp; Mind Coaching</h2>
-  <div class="indiv-copy">
+  <h2 data-aos="fade-up">Life &amp; Mind Coaching</h2>
+  <div class="indiv-copy" data-aos="fade-up">
     <p>
       One-to-one coaching tailored to where you are right now. Together, we’ll unpack what’s going on,
       clarify what matters, and build habits that move you forward.
@@ -64,13 +64,13 @@ header:
 
 <!-- Travel4Life -->
 <section class="site-section indiv">
-  <figure class="indiv-media indiv-media-center">
+  <figure class="indiv-media indiv-media-center" data-aos="fade-up">
     <img src="/assets/images/travel4life.webp"
          alt="Travel4Life – go on an adventure"
          loading="lazy">
   </figure>
-  <h2>Travel4Life</h2>
-  <div class="indiv-copy">
+  <h2 data-aos="fade-up">Travel4Life</h2>
+  <div class="indiv-copy" data-aos="fade-up">
     <p>
       Sometimes a change of scene is exactly what you need. <strong>Travel4Life</strong> is a tailored
       “time out”: nature, city, coast or a <em>mystery destination</em>.<br> We mix
@@ -101,8 +101,8 @@ header:
 
 <!-- Pillars reminder -->
 <section class="site-section indiv">
-  <h2>Always Connected to the 4 Pillars</h2>
-  <div class="indiv-copy">
+  <h2 data-aos="fade-up">Always Connected to the 4 Pillars</h2>
+  <div class="indiv-copy" data-aos="fade-up">
     <p>
       Everything we do connects back to the<br>
       <span class="pillars-highlight">Body • Mind • Heart • Spirit</span>.
@@ -113,7 +113,7 @@ header:
     </p>
   </div>
 
-  <figure class="indiv-media indiv-media-center">
+  <figure class="indiv-media indiv-media-center" data-aos="fade-up">
     <a href="/assets/images/4-pillars.webp" data-lightbox="indiv" data-title="Strength4Life – the four pillars">
       <img src="/assets/images/4-pillars.webp" alt="Strength4Life pillars: Body, Mind, Heart, Spirit" loading="lazy">
     </a>
@@ -123,7 +123,7 @@ header:
 
 <!-- Closing CTA -->
 <section class="site-section indiv">
-  <blockquote class="indiv-closing">
+  <blockquote class="indiv-closing" data-aos="fade-up">
     Take your first step today — together we’ll find your balance and help you be the best you can be.
     <br>
     <a href="/contact/" class="btn btn--primary">Contact Me</a>
