--- a/_pages/coaching-for-individuals/life-mind-coaching.html
+++ b/_pages/coaching-for-individuals/life-mind-coaching.html
@@ -7,9 +7,9 @@ header:
 
 <!-- INTRO -->
 <section class="site-section indiv first-section">
-  <h1>Life & Mind Coaching</h1>
-  <p><em>Live a balanced life – feel good</em></p>
-  <p>
+  <h1 data-aos="fade-up">Life & Mind Coaching</h1>
+  <p data-aos="fade-up"><em>Live a balanced life – feel good</em></p>
+  <p data-aos="fade-up">
     Enhance your life skills and knowledge through a strong life focus.
     Through <strong>coaching, retreats and mentoring</strong>, I help you
     become <span class="pillars-highlight">confident, strong and balanced</span>.
@@ -20,8 +20,8 @@ header:
 
 <!-- 3 LEVELS -->
 <section class="site-section indiv">
-  <h2>Choose Your Coaching Path</h2>
-  <div class="box-container">
+  <h2 data-aos="fade-up">Choose Your Coaching Path</h2>
+  <div class="box-container" data-aos="fade-up">
     <div class="box box-third box--primary">
       <h3>Focus 4 Life</h3>
       <p>
@@ -48,7 +48,7 @@ header:
       </p>
     </div>
   </div>
-  <p>
+  <p data-aos="fade-up">
     <a href="/contact/" class="btn btn--primary">Choose your level → Contact Me</a>
   </p>
 </section>
@@ -57,20 +57,20 @@ header:
 
 <!-- WHY IT MATTERS -->
 <section class="site-section indiv">
-  <h2>Why It Matters</h2>
-  <p>
+  <h2 data-aos="fade-up">Why It Matters</h2>
+  <p data-aos="fade-up">
     You can make a strong impact on your future — <strong>your life</strong>.
     Strength4Life coaching is built around the
     <span class="pillars-highlight">Body • Mind • Heart • Spirit</span>,
     a realistic and holistic approach to balance.
   </p>
-  <p>
+  <p data-aos="fade-up">
     Everyone is on a unique life journey.
     I’ll help you build your personal toolkit of
     <span class="text-red">skills and strategies</span> for lasting change.
   </p>
 
-  <figure class="indiv-media">
+  <figure class="indiv-media" data-aos="fade-up">
     <a href="/assets/images/4-pillars.webp"
        data-lightbox="indiv"
        data-title="The 4 Pillars – Body, Mind, Heart, Spirit">
@@ -83,22 +83,22 @@ header:
 
 <!-- TESTIMONIALS -->
 <section class="site-section indiv">
-  <h2>What People Say</h2>
-  <blockquote class="indiv-quote-red">
+  <h2 data-aos="fade-up">What People Say</h2>
+  <blockquote class="indiv-quote-red" data-aos="fade-up">
     “I’ve learned to have faith in my own abilities and to be more confident
     to ‘try’! I’ve also learned more about dealing with difficult situations
     through resilience and personal strength.”
   </blockquote>
-  <blockquote class="indiv-quote-red">
+  <blockquote class="indiv-quote-red" data-aos="fade-up">
     “Informative and very helpful… how body, mind, heart and spirit relates
     to the daily life we live in.”
   </blockquote>
 
-  <a href="#" class="btn btn--primary" id="toggle-testimonials" aria-expanded="false" aria-controls="s4l-testimonials-more">
+  <a href="#" class="btn btn--primary" id="toggle-testimonials" aria-expanded="false" aria-controls="s4l-testimonials-more" data-aos="fade-up">
     Read more client voices
   </a>
 
-  <div id="s4l-testimonials-more" class="s4l-more" hidden>
+  <div id="s4l-testimonials-more" class="s4l-more" hidden data-aos="fade-up">
     <blockquote>“The experience has given me the opportunity to pull myself to pieces and rebuild / re-assess myself in a safe, supportive space.”</blockquote>
     <blockquote>“Thank you Jon — your program made a huge impact! I’m now doing what makes me and the people I care about happy. I’m looking after myself better and leading a much healthier work/life balance.”</blockquote>
     <blockquote>“Informative and very helpful… how body, mind, heart and spirit relates to the daily life we live in.”</blockquote>
@@ -135,7 +135,7 @@ header:
 
 <!-- CLOSING -->
 <section class="site-section indiv">
-  <blockquote class="indiv-closing">
+  <blockquote class="indiv-closing" data-aos="fade-up">
     “Never stop learning, because life never stops teaching.”<br>
     <a href="/contact/" class="btn btn--primary">Contact Me</a>
   </blockquote>
