--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,17 +7,17 @@ header:
 
 <!-- INTRO -->
 <section class="site-section about about-center first-section">
-    <h1>About Me</h1>
+    <h1 data-aos="fade-up">About Me</h1>
     <p>
         <span class="text-red">Strength4Life</span> encourages and enables you to be the best you can be.
         My solutions are tailored to your needs — whether you’re an individual looking for balance
-        or an organisation aiming to strengthen your people.
+        or an organisation aiming to strengthen your people." data-aos="fade-up
     </p>
     <p>
         From my own journey, I know how important true balance is. It’s more than work-life balance —
         it’s about a holistic, strong approach to <em>every</em> part of life. The
         <span class="text-red">Strength4Life method</span> not only impacts your wellbeing directly,
-        it also has a ripple effect: on your family, your community, and your organisation.
+        it also has a ripple effect: on your family, your community, and your organisation." data-aos="fade-up
     </p>
 </section>
 
@@ -25,26 +25,26 @@ header:
 
 <!-- WHY BALANCE -->
 <section class="alternative-color site-section about">
-    <h2>Why Balance Matters</h2>
+    <h2 data-aos="fade-up">Why Balance Matters</h2>
 
-    <p>
+    <p data-aos="fade-up">
         Around 1 in 5 adults struggle with stress, anxiety or depression — and many face related health
         issues such as obesity or chronic illness. I’ve seen the toll this takes, and I’ve also seen the
         power of strong individuals to support and inspire those around them.
     </p>
 
-    <p>
+    <p data-aos="fade-up">
         A good, healthy balance in life strengthens both your body and your mind. It helps prevent health
         issues, builds resilience, and enhances your personal and professional life. In today’s changing
         world, when uncertainty is the new normal, this has never been more important.
     </p>
 
-    <blockquote class="about-quote-red">
+    <blockquote class="about-quote-red" data-aos="fade-up">
         “I’ve learnt to have faith in my own abilities and to be more confident to ‘try’! I’ve also
         learned more about dealing with difficult situations through resilience and personal strength.”
     </blockquote>
 
-    <figure class="about-media about-media-center">
+    <figure class="about-media about-media-center" data-aos="fade-up">
         <img src="/assets/images/jon2.webp" alt="Jon Evans portrait">
     </figure>
 </section>
@@ -53,22 +53,22 @@ header:
 
 <!-- DIFFERENCE -->
 <section class="site-section about">
-    <h2>How Strength4Life is Different</h2>
-    <p>
+    <h2 data-aos="fade-up">How Strength4Life is Different</h2>
+    <p data-aos="fade-up">
         My approach is real and authentic. I don’t believe in one-size-fits-all coaching — instead, I
         work with you through a <span class="text-red">down-to-earth method</span> that focuses on
         awareness, reflection, planning and taking action.
     </p>
-    <p>
+    <p data-aos="fade-up">
         Closely aligned with <span class="text-red">Maslow’s Hierarchy of Human Needs</span>, I support
         you in forming new habits that lead to small but significant enhancements in your life quality.
         And I don’t just stop at the session — I follow up and follow through, to make sure the tools
         we put in place really last.
     </p>
-    <blockquote>
+    <blockquote data-aos="fade-up">
         “Informative and very helpful… how body, mind, heart and spirit relates to the daily life we live in.”
     </blockquote>
-    <figure class="about-media about-media-center">
+    <figure class="about-media about-media-center" data-aos="fade-up">
         <img src="/assets/images/motorbike.webp" alt="Jon Evans motorbike, 'where is life's journey taking you?'">
     </figure>
 </section>
@@ -77,8 +77,8 @@ header:
 
 <!-- STORY -->
 <section class="alternative-color site-section about">
-    <h2>My Story</h2>
-    <div class="about-gallery">
+    <h2 data-aos="fade-up">My Story</h2>
+    <div class="about-gallery" data-aos="fade-up">
         <figure>
             <a href="/assets/images/jon-portrait.webp" data-lightbox="about-gallery" data-title="Jon Evans coaching portrait">
                 <img src="/assets/images/jon-portrait.webp" alt="Jon Evans coaching portrait">
@@ -97,29 +97,29 @@ header:
     </div>
 
 
-    <p>
+    <p data-aos="fade-up">
         I grew up on a tiny island in the middle of the ocean — and at 17, I set out to see the world.
         Fifty years later, I’m still on that journey. I’ve lived in Australia, the USA, the Middle East
         and Europe, and I’ve now made Germany my home.
     </p>
-    <p>
+    <p data-aos="fade-up">
         Along the way, I’ve worked with people from more than <span class="text-red">100 nationalities</span>:
         in airlines, hospitality, learning & development, and academia. What connects all of it is simple:
         <span class="text-purple">I love working with people</span>.
     </p>
-    <p>
+    <p data-aos="fade-up">
         My career started in international travel with Air Canada, Qantas and KLM, followed by hospitality
         management roles with Westin Hotels in Australia and Europe. Later, I worked with the Police
         Services for the Sydney Olympic Games, and with the Learning & Development team at the Burj Al
         Arab and Jumeirah Group.
     </p>
-    <p>
+    <p data-aos="fade-up">
         I’ve also trained and lectured at the University of Tasmania and the University of Sydney, bringing
         my passion for developing others into education. Since 2015, I’ve been the face of
         <span class="text-red">Strength4Life</span> — combining all of these experiences into one mission:
         enabling people to live a balanced, strong, and fulfilling life.
     </p>
-    <p>
+    <p data-aos="fade-up">
         Don’t be surprised if I turn up to a meeting on my motorbike, wearing my leather jacket.
         That’s me. I love travel, people, food, whisky — and of course, motorbikes.
     </p>
@@ -129,8 +129,8 @@ header:
 
 <!-- QUALIFICATIONS -->
 <section class="site-section about">
-    <h2>Qualifications</h2>
-    <ul class="about-qualifications">
+    <h2 data-aos="fade-up">Qualifications</h2>
+    <ul class="about-qualifications" data-aos="fade-up">
         <li>Master’s in Business</li>
         <li>Bachelor in Adult & Vocational Education</li>
         <li>Associate Degree in Hospitality Management</li>
@@ -139,7 +139,7 @@ header:
         <li>CIPD Learning & Development</li>
     </ul>
 
-    <blockquote class="about-quote">
+    <blockquote class="about-quote" data-aos="fade-up">
         “Never stop learning, because life never stops teaching.”<br>
         <a href="/contact/" class="btn btn--primary">Contact Me</a>
     </blockquote>
