--- a/_pages/consulting-for-businesses.html
+++ b/_pages/consulting-for-businesses.html
@@ -7,17 +7,17 @@ header:
 
 <!-- INTRO -->
 <section class="site-section first-section business">
-  <h1>Consulting for Businesses & Organisations</h1>
-  <p>
+  <h1 data-aos="fade-up">Consulting for Businesses & Organisations</h1>
+  <p data-aos="fade-up">
     <span class="text-red">Strength4Life</span> offers flexible, authentic programs
     that help your organisation and your people <strong>be the best they can be</strong>.
   </p>
-  <p>
+  <p data-aos="fade-up">
     There is strong evidence that employee development — especially health and wellbeing —
     provides an excellent return on investment. By focusing on <em>presenteeism</em> instead of absenteeism,
     Strength4Life develops productive, mindful, safe and well employees.
   </p>
-  <p>
+  <p data-aos="fade-up">
     <a href="/contact/" class="btn btn--primary">Contact Me</a>
   </p>
 </section>
@@ -26,19 +26,19 @@ header:
 
 <!-- WHY BALANCE -->
 <section class="site-section business">
-  <h2>Why Balance Matters at Work</h2>
-  <p>
+  <h2 data-aos="fade-up">Why Balance Matters at Work</h2>
+  <p data-aos="fade-up">
     Happy, healthy and strong employees have a <span class="text-red">direct impact</span> on
     productivity, profitability and reputation. Employers also have a duty of care to provide
     a safe and supportive work environment.
   </p>
-  <p>
+  <p data-aos="fade-up">
     The <span class="text-red">Strength4Life</span> solution is different. Aligned with
     <strong>Maslow’s Hierarchy of Human Needs</strong>, we encourage employees to
     focus, reflect, plan and act on their own<br>
     <span class="pillars-highlight">Body • Mind • Heart • Spirit</span>.
   </p>
-  <blockquote class="business-quote-red">
+  <blockquote class="business-quote-red" data-aos="fade-up">
     “I think that Strength4Life has made me into a better employee.”
   </blockquote>
 </section>
@@ -47,18 +47,18 @@ header:
 
 <!-- LEADING CHANGE -->
 <section class="site-section business">
-  <h2>Leading Change in Your Organisation</h2>
-  <p>
+  <h2 data-aos="fade-up">Leading Change in Your Organisation</h2>
+  <p data-aos="fade-up">
     Our <strong>Leading Change</strong> series offers flexible options to deliver
     Strength4Life in your organisation and provide your employees with the
     <span class="text-red">tools</span> to be the best they can be.
   </p>
-  <p>
+  <p data-aos="fade-up">
     With a total of 18 workshop modules, supported by 1:1 coaching, buddy groups
     and work-based projects, we align learning with your business needs.
   </p>
 
-  <div class="box-container">
+  <div class="box-container" data-aos="fade-up">
     <div class="box box-half box--primary">
       <h3>Core People Management Modules</h3>
       <ul class="business-list">
@@ -109,7 +109,7 @@ header:
 
 
 
-  <blockquote class="business-quote-red">
+  <blockquote class="business-quote-red" data-aos="fade-up">
     “This course has given me the necessary skills and support to feel more confident with my work,
     which filters down to my staff and the general work environment."
   </blockquote>
@@ -122,13 +122,13 @@ header:
 
 <!-- CAREER COACHING -->
 <section class="site-section business">
-  <h2>Career Coaching</h2>
-  <p>
+  <h2 data-aos="fade-up">Career Coaching</h2>
+  <p data-aos="fade-up">
     I work with employees and leaders to build clarity, confidence and direction.
     Through tailored <strong>1:1 coaching</strong> or small groups, we focus on
     resilience, leadership and sustainable growth inside your organisation.
   </p>
-  <p>
+  <p data-aos="fade-up">
     <a href="/contact/" class="btn btn--info">Talk about Career Coaching</a>
   </p>
 </section>
@@ -137,21 +137,21 @@ header:
 
 <!-- LEADING IN CHANGING TIMES -->
 <section class="site-section business">
-  <h2>Leading in Changing Times</h2>
-  <p>
+  <h2 data-aos="fade-up">Leading in Changing Times</h2>
+  <p data-aos="fade-up">
     The <span class="text-red">world of business has changed forever</span>. Directors, managers and leaders
     are now responsible for guiding their organisations through transformation while staying flexible for the future.
   </p>
-  <p>
+  <p data-aos="fade-up">
     Strength4Life collaborates with stakeholders to <strong>guide and facilitate</strong> your journey.
     We offer strategic and practical solutions through workshops, facilitated meetings and 1:1 sessions
     tailored to your context.
   </p>
-  <blockquote class="business-quote-red">
+  <blockquote class="business-quote-red" data-aos="fade-up">
     “Jon, this gave me the opportunity to truly reflect on who I am and who I want to be.
     It empowered me to take an essential step toward the leader I want to be.”
   </blockquote>
-  <p>
+  <p data-aos="fade-up">
     <a href="/contact/" class="btn btn--primary">Next Steps → Contact Me</a>
   </p>
 </section>
@@ -160,7 +160,7 @@ header:
 
 <!-- CLOSING QUOTE -->
 <section class="site-section business">
-  <blockquote class="business-closing">
+  <blockquote class="business-closing" data-aos="fade-up">
     “Never stop learning, because life never stops teaching.”
     <br>
     <a href="/contact/" class="btn btn--primary" style="font-style: normal;">Contact Me</a>
