--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -7,12 +7,12 @@ header:
 
 <section class="site-section first-section contact">
 
-    <h1>Contact</h1>
+    <h1 data-aos="fade-up">Contact</h1>
 
-    <p>If you’d like to work together or have a question, choose one of the options below.</p>
+    <p data-aos="fade-up">If you’d like to work together or have a question, choose one of the options below.</p>
 
     <!-- Quick action buttons -->
-    <p>
+    <p data-aos="fade-up">
         <a class="btn btn--primary" href="mailto:jon@strength4life.eu">
             Email: jon@strength4life.eu (placeholder)
         </a>
@@ -25,7 +25,7 @@ header:
     </p>
 
     <!-- Simple (non-functional) contact form -->
-    <form class="contact-form" action="#" method="post">
+    <form class="contact-form" action="#" method="post" data-aos="fade-up">
         <div class="form-row">
             <label for="name">Your Name</label>
             <input id="name" name="name" type="text" required>
