--- a/_pages/index.html
+++ b/_pages/index.html
@@ -14,14 +14,14 @@ header:
 <h3 class="home-subheading" data-aos="fade-down">– Meet Jon: Life Coach • Enabler • Management Consultant –</h3>
 
 <div class="testimonial-div">
-    <p class="testimonial">
+    <p class="testimonial" data-aos="fade-up">
         “Life changing – both professional &amp; personal.”
     </p>
-    <a href="#" class="btn btn--primary" id="toggle-testimonials" aria-expanded="false" aria-controls="s4l-testimonials-more">
+    <a href="#" class="btn btn--primary" id="toggle-testimonials" aria-expanded="false" aria-controls="s4l-testimonials-more" data-aos="fade-up">
         Read more client voices
     </a>
 
-    <div id="s4l-testimonials-more" class="s4l-more" hidden>
+    <div id="s4l-testimonials-more" class="s4l-more" hidden data-aos="fade-up">
         <blockquote>“The experience has given me the opportunity to pull myself to pieces and rebuild / re-assess myself in a safe, supportive space.”</blockquote>
         <blockquote>“Thank you Jon — your program made a huge impact! I’m now doing what makes me and the people I care about happy. I’m looking after myself better and leading a much healthier work/life balance.”</blockquote>
         <blockquote>“Informative and very helpful… how body, mind, heart and spirit relates to the daily life we live in.”</blockquote>
@@ -81,8 +81,8 @@ header:
 
 
 <div class="german-intro-container">
-    <div class="german-intro-image"></div>
-    <div class="german-intro-box">
+    <div class="german-intro-image" data-aos="fade-up"></div>
+    <div class="german-intro-box" data-aos="fade-up">
         <h2>🇩🇪 Willkommen bei Strength4Life</h2>
         <p>
             Ich bin Jon – Life Coach, Enabler, Management Consultant.
@@ -97,20 +97,20 @@ header:
 
 
 <div class="short-bio">
-    <p>
+    <p data-aos="fade-up">
         Hi, I’m Jon. I grew up on a small island and ever since I was 17,
         I’ve been exploring the world — <span class="text-purple">92 countries</span> so far!
         Along the way I’ve worked with people from more than
         <span class="text-red">100 nationalities</span>, in airlines, hospitality, education, and business.
     </p>
 
-    <p>
+    <p data-aos="fade-up">
         What all these experiences taught me is simple:
         <span class="text-purple">life is about people</span>. Supporting, listening, challenging,
         and encouraging each other to grow.
     </p>
 
-    <p>
+    <p data-aos="fade-up">
         Today, through <span class="text-red">Strength4Life</span>, I bring all of this experience together as a
         <span class="text-purple">Life Coach, Enabler and Management Consultant</span>.
         My goal is to help you discover your own strength, create balance, and move forward —
@@ -128,31 +128,31 @@ header:
 <section class="alternative-color site-section"  id="my-approach">
     <div class="approach">
 
-        <h1>My Approach</h1>
+        <h1 data-aos="fade-up">My Approach</h1>
 
-        <p>
+        <p data-aos="fade-up">
             <span class="pillars-highlight">Body • Mind • Heart • Spirit</span> – Strength4Life encourages you to be the best you can be!
         </p>
 
-        <p>
+        <p data-aos="fade-up">
             Strongly aligned to <span class="text-red">Maslow's Hierarchy of Human Needs</span>, I deliver a very realistic approach to a balanced life.
             Working with your four pillars and your own life story, I encourage and provide ongoing support – enabling you to become
             <span class="text-red">strong, mindful, resilient and respectful</span>.
         </p>
 
         <!-- Maslow pyramid -->
-        <figure class="approach-media">
+        <figure class="approach-media" data-aos="fade-up">
             <a href="/assets/images/maslow-pyramid.webp" data-lightbox="approach" data-title="Maslow’s Hierarchy of Human Needs">
                 <img src="/assets/images/maslow-pyramid.webp" alt="Maslow’s Hierarchy of Human Needs pyramid">
             </a>
         </figure>
 
-        <h3>Balance and the 4 Pillars</h3>
-        <p>
+        <h3 data-aos="fade-up">Balance and the 4 Pillars</h3>
+        <p data-aos="fade-up">
             Good balance in your life is the synergy of many factors all existing together.
             That’s why I work with the <span class="text-red">four pillars</span>:
         </p>
-        <ul>
+        <ul data-aos="fade-up">
             <li><strong>Body</strong> — health, energy, daily practices</li>
             <li><strong>Mind</strong> — learning, clarity, curiosity</li>
             <li><strong>Heart</strong> — emotions, relationships, values</li>
@@ -160,50 +160,50 @@ header:
         </ul>
 
         <!-- 4 pillars graphic -->
-        <figure class="approach-media">
+        <figure class="approach-media" data-aos="fade-up">
             <a href="/assets/images/4-pillars.webp" data-lightbox="approach" data-title="Strength4Life Four Pillars">
                 <img src="/assets/images/4-pillars.webp" alt="Strength4Life 4 pillars: Body, Mind, Heart, Spirit">
             </a>
         </figure>
 
-        <blockquote>
+        <blockquote data-aos="fade-up">
             “Jon and Strength 4 Life has motivated and inspired me to be more ‘aware’ of me! The fantastic structure of pillars always gives me a ‘checkpoint of in balance’. Reflection and awareness of where I’m at and where I’m going is a major benefit of learning from the master trainer, Jon. Many thanks for being an INFLUENTIAL part of my life!!”
         </blockquote>
 
-        <h3>Holistic Approach</h3>
-        <p>
+        <h3 data-aos="fade-up">Holistic Approach</h3>
+        <p data-aos="fade-up">
             Treatment for the body, mind, spirit, connections and emotions.
             An holistic approach simply means treating the <span class="text-red">whole person</span> rather than individual symptoms.
             Holistic practices help to regain physical and energy balance in the body.
         </p>
-        <p>
+        <p data-aos="fade-up">
             There is much to be credited to the ancient wisdom of our world.
             Holistic therapies have been used for centuries and can play an important role in maintaining <span class="text-red">good health and well-being</span>.
             Rather than addressing single symptoms, a holistic approach looks at the underlying cause – considering physical, mental, emotional, social and spiritual states together.
         </p>
 
         <!-- Holistic circle graphic -->
-        <figure class="approach-media">
+        <figure class="approach-media" data-aos="fade-up">
             <a href="/assets/images/holistic.webp" data-lightbox="approach" data-title="Strength4Life Holistic Approach">
                 <img src="/assets/images/holistic.webp" alt="Strength4Life holistic approach circle">
             </a>
         </figure>
 
-        <p>
+        <p data-aos="fade-up">
             Having a holistic approach to health and wellbeing involves activating the multiple and complex links between
             <span class="text-red">Body, Mind, Heart and Spirit</span>.
         </p>
 
-        <blockquote>
+        <blockquote data-aos="fade-up">
             “From the basics to the deep stuff – it made me examine, find and be my authentic self – amidst a very crappy year personally – it really did give me some strength for my life.”
         </blockquote>
 
-        <p>
+        <p data-aos="fade-up">
             <a href="/contact/" class="btn btn--info">Interested to learn more? Contact me!</a>
         </p>
 
         <!-- Jon portrait -->
-        <figure class="approach-media">
+        <figure class="approach-media" data-aos="fade-up">
             <img src="/assets/images/jon-portrait.webp" alt="Jon Evans coaching portrait">
         </figure>
 
@@ -218,9 +218,9 @@ header:
 <hr class="section-sep">
 
 <section class="site-section">
-    <h1>Who I Work With</h1>
+    <h1 data-aos="fade-up">Who I Work With</h1>
 
-    <div class="box-container">
+    <div class="box-container" data-aos="fade-up">
 
         <!-- For Individuals -->
         <div class="box box-half box--primary">
@@ -250,7 +250,7 @@ header:
     </div>
 
     <!-- Closing quote -->
-    <blockquote class="closing-quote">
+    <blockquote class="closing-quote" data-aos="fade-up">
         “Never stop learning, because life never stops teaching.”<br>
         <a href="/contact/" style="font-style: normal;" class="btn btn--primary">Contact Me</a>
     </blockquote>
